[package]
name = "clstr"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/tolkit/vscan/tree/main/src/clstr"
documentation = "https://docs.rs/clstr"
homepage = "https://github.com/tolkit/vscan/tree/main/src/clstr"
description = """
A library to parse and write .clstr files from 'CD-HIT', as well as a small
binary with simple functionality.
"""
categories = ["science"]
license = "MIT"

[[bin]]
name = "clstr"
path = "src/main.rs"

[target.'cfg(not(test))'.dependencies]
clap = { version = "4.5.19", features = ["cargo"] }
bio = "3.0.0"
flate2 = "1.0.34"
